# techtalks

./: README.md  render.yaml  render.yml
backend/: .env.example  .gitignore  .isort.cfg  README.md  build.sh  pyproject.toml  requirements.txt
backend/core/: settings.py  urls.py
backend/coupon/: admin.py
backend/coupon/migrations/: 0001_initial.py  0002_alter_coupon_options.py
backend/coupon/models/: coupon.py
backend/coupon/permissions/: __init__.py  coupon.py
backend/coupon/serializers/: __init__.py  coupon.py
backend/coupon/tests/: __init__.py  coupon.py
backend/coupon/views/: __init__.py  coupon.py  validity.py
backend/event/: admin.py
backend/event/migrations/: 0001_initial.py
backend/event/models/: event.py
backend/event/serializers/: event.py
backend/event/tests/: __init__.py  event.py  tests.py
backend/event/views/: event.py
backend/locale/pt/LC_MESSAGES/: django.po
backend/organizer/: admin.py
backend/organizer/migrations/: 0001_initial.py  0002_alter_organizer_email.py  0003_organizer_groups_organizer_is_staff_and_more.py  0004_alter_organizer_options.py  0005_alter_organizer_company_name.py  0006_alter_organizer_cnpj.py  0007_alter_organizer_options.py  0008_organizer_date_joined.py
backend/organizer/models/: __init__.py  manager.py  organizer.py
backend/organizer/serializers/: __init__.py  organizer.py
backend/organizer/tests/: __init__.py  organizer.py
backend/organizer/views/: __init__.py  organizer.py  register.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
(+10 files in other folders)
